# clipper

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run.bat
.claude/skills/fastapi-conventions/: SKILL.md
.claude/skills/ffmpeg-video-pipeline/: SKILL.md
.claude/skills/llm-scoring-contract/: SKILL.md
.claude/skills/whisper-transcription/: SKILL.md
src/clipforge/: __init__.py  __main__.py  analyze.py  captions.py  config.py  cut.py  db.py  download.py  llm.py  pipeline.py  queue.py  reframe.py  render.py  transcribe.py
src/clipforge/web/: __init__.py  app.py  schemas.py
src/clipforge/web/static/: app.js  modal.js  style.css
src/clipforge/web/templates/: _caption.html  _clip_card.html  _job_row.html  _status.html  base.html  index.html  job.html  settings.html
tests/: test_analyze.py  test_captions.py  test_cut.py  test_db.py  test_download.py  test_llm.py  test_pipeline.py  test_render.py  test_transcribe.py  test_web.py
